[gd_scene load_steps=12 format=2]

[ext_resource path="res://Leveles/BaseLevel/baseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ShopItems/baseShopItem/BaseShopItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Leveles/RoomTLB/shopCode.gd" type="Script" id=3]
[ext_resource path="res://Leveles/RoomTLB/Top.png" type="Texture" id=4]
[ext_resource path="res://Leveles/RoomTLB/sideL.png" type="Texture" id=5]
[ext_resource path="res://BadGuys/Ant/Ant.tscn" type="PackedScene" id=6]
[ext_resource path="res://BadGuys/Caterpillar/Caterpillar.tscn" type="PackedScene" id=7]
[ext_resource path="res://BadGuys/Plant/Plant.tscn" type="PackedScene" id=8]
[ext_resource path="res://Leveles/reddoor.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.0112, 50.2745 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.6974, 53.1029 )

[node name="RoomTBLShop" instance=ExtResource( 1 )]

[node name="back" parent="." index="1"]
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 1, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -1, 0, 0, -65536, 10, 0, -65535, 10, 0, -65534, 11, 0, -65533, 10, 0, -65532, 10, 0, -65531, 10, 0, -65530, 10, 0, -65529, 10, 0, -65528, 10, 0, -65527, 10, 0, -65526, 10, 0, -65525, 10, 0, -65524, 10, 0, -65523, 10, 0, -65522, 10, 0, -65521, 10, 0, -65520, 10, 0, -65519, 10, 0, -65518, 10, 0, -65517, 0, 0, 65535, 0, 0, 0, 10, 0, 1, 10, 0, 2, 12, 0, 3, 10, 0, 4, 12, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 12, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 0, 0, 131071, 0, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 11, 0, 65546, 10, 0, 65547, 10, 0, 65548, 10, 0, 65549, 10, 0, 65550, 12, 0, 65551, 10, 0, 65552, 10, 0, 65553, 12, 0, 65554, 10, 0, 65555, 0, 0, 196607, 0, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 11, 0, 131076, 12, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 131080, 10, 0, 131081, 10, 0, 131082, 10, 0, 131083, 12, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 131087, 10, 0, 131088, 10, 0, 131089, 10, 0, 131090, 10, 0, 131091, 0, 0, 262143, 0, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 12, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 10, 0, 196619, 10, 0, 196620, 10, 0, 196621, 10, 0, 196622, 10, 0, 196623, 10, 0, 196624, 12, 0, 196625, 10, 0, 196626, 10, 0, 196627, 0, 0, 327679, 1, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 11, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 10, 0, 262160, 10, 0, 262161, 11, 0, 262162, 10, 0, 262163, 0, 0, 393215, 0, 0, 327680, 10, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 10, 0, 327689, 10, 0, 327690, 10, 0, 327691, 10, 0, 327692, 10, 0, 327693, 10, 0, 327694, 10, 0, 327695, 11, 0, 327696, 10, 0, 327697, 10, 0, 327698, 10, 0, 327699, 0, 0, 458751, 0, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 0, 393219, 12, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 10, 0, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 393229, 11, 0, 393230, 10, 0, 393231, 10, 0, 393232, 10, 0, 393233, 12, 0, 393234, 10, 0, 393235, 0, 0, 524287, 0, 0, 458752, 10, 0, 458753, 10, 0, 458754, 10, 0, 458755, 12, 0, 458756, 10, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 11, 0, 458761, 10, 0, 458762, 11, 0, 458763, 11, 0, 458764, 10, 0, 458765, 10, 0, 458766, 10, 0, 458767, 10, 0, 458768, 12, 0, 458769, 10, 0, 458770, 10, 0, 458771, 0, 0, 589823, 0, 0, 524288, 10, 0, 524289, 10, 0, 524290, 12, 0, 524291, 10, 0, 524292, 10, 0, 524293, 12, 0, 524294, 12, 0, 524295, 12, 0, 524296, 10, 0, 524297, 12, 0, 524298, 12, 0, 524299, 10, 0, 524300, 10, 0, 524301, 10, 0, 524302, 10, 0, 524303, 12, 0, 524304, 10, 0, 524305, 10, 0, 524306, 10, 0, 524307, 0, 0, 655359, 0, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 12, 0, 589828, 10, 0, 589829, 12, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 10, 0, 589834, 10, 0, 589835, 10, 0, 589836, 10, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 10, 0, 589841, 10, 0, 589842, 10, 0, 589843, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 1, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0 )

[node name="Node2D" type="Node2D" parent="." index="2"]

[node name="TextureRect" type="TextureRect" parent="Node2D" index="0"]
margin_left = -94.1803
margin_top = -186.679
margin_right = 963.82
margin_bottom = 117.321
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Node2D" index="1"]
margin_left = 368.312
margin_top = -205.179
margin_right = 1426.31
margin_bottom = 98.8214
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Node2D" index="2"]
margin_left = 694.58
margin_top = -193.406
margin_right = 1752.58
margin_bottom = 110.594
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Node2D" index="3"]
margin_left = 1049.44
margin_top = -213.588
margin_right = 2107.44
margin_bottom = 90.4124
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Node2D" index="4"]
margin_left = -114.362
margin_top = -262.359
margin_right = 943.638
margin_bottom = 41.6405
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Node2D" index="5"]
margin_left = 348.131
margin_top = -280.859
margin_right = 1406.13
margin_bottom = 23.1408
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Node2D" index="6"]
margin_left = 674.398
margin_top = -269.087
margin_right = 1732.4
margin_bottom = 34.9133
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Node2D" index="7"]
margin_left = 1029.26
margin_top = -289.268
margin_right = 2087.26
margin_bottom = 14.7318
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="Node2D" index="8"]
margin_left = -168.179
margin_top = 607.127
margin_right = 889.821
margin_bottom = 911.127
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="Node2D" index="9"]
margin_left = 294.314
margin_top = 588.627
margin_right = 1352.31
margin_bottom = 892.627
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="Node2D" index="10"]
margin_left = 620.581
margin_top = 600.4
margin_right = 1678.58
margin_bottom = 904.4
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="Node2D" index="11"]
margin_left = 975.439
margin_top = 580.218
margin_right = 2033.44
margin_bottom = 884.218
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect13" type="TextureRect" parent="Node2D" index="12"]
margin_left = -232.087
margin_top = 684.489
margin_right = 825.913
margin_bottom = 988.489
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect14" type="TextureRect" parent="Node2D" index="13"]
margin_left = 230.405
margin_top = 665.99
margin_right = 1288.41
margin_bottom = 969.99
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect15" type="TextureRect" parent="Node2D" index="14"]
margin_left = 556.673
margin_top = 677.762
margin_right = 1614.67
margin_bottom = 981.762
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect16" type="TextureRect" parent="Node2D" index="15"]
margin_left = 911.531
margin_top = 657.58
margin_right = 1969.53
margin_bottom = 961.58
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect17" type="TextureRect" parent="Node2D" index="16"]
margin_left = -249.187
margin_top = -98.7767
margin_right = 39.8134
margin_bottom = 663.223
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect18" type="TextureRect" parent="Node2D" index="17"]
margin_left = -422.046
margin_top = -110.001
margin_right = -133.046
margin_bottom = 651.999
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect19" type="TextureRect" parent="Node2D" index="18"]
margin_left = 1333.48
margin_top = -123.471
margin_right = 1622.48
margin_bottom = 638.529
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect20" type="TextureRect" parent="Node2D" index="19"]
margin_left = 1160.63
margin_top = -134.695
margin_right = 1449.63
margin_bottom = 627.305
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plant" parent="EnemySpawn" index="0" instance=ExtResource( 8 )]
position = Vector2( 260.216, 175.363 )

[node name="Caterpillar" parent="EnemySpawn" index="1" instance=ExtResource( 7 )]
position = Vector2( 984.294, 229.103 )

[node name="Ant" parent="EnemySpawn" index="2" instance=ExtResource( 6 )]
position = Vector2( 630.74, 181.02 )

[node name="Player" parent="." index="7"]
position = Vector2( 666.952, 1.68646 )

[node name="CollisionShape2D" parent="Doors" index="0" groups=[
"door1",
]]
position = Vector2( 664.308, -90.8167 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Doors" index="1" groups=[
"door2",
]]
position = Vector2( -28.8958, 284.525 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Doors" index="2" groups=[
"door3",
]]
position = Vector2( 673.582, 681.694 )
shape = SubResource( 2 )

[node name="shopCode" type="Node2D" parent="VisableOnClear" index="0"]
script = ExtResource( 3 )

[node name="BaseShopItem1" parent="VisableOnClear" index="1" instance=ExtResource( 2 )]
position = Vector2( 340, 180 )

[node name="BaseShopItem2" parent="VisableOnClear" index="2" instance=ExtResource( 2 )]
position = Vector2( 509.008, 180 )

[node name="BaseShopItem3" parent="VisableOnClear" index="3" instance=ExtResource( 2 )]
position = Vector2( 685.397, 180 )

[node name="TextureRect3" type="TextureRect" parent="VisableOnClear" index="4"]
margin_left = 650.241
margin_top = -127.855
margin_right = 702.241
margin_bottom = -64.8552
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="VisableOnClear" index="5"]
margin_left = 650.241
margin_top = 638.649
margin_right = 702.241
margin_bottom = 701.649
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="VisableOnClear" index="6"]
margin_left = -45.5529
margin_top = 248.326
margin_right = 6.44708
margin_bottom = 311.326
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
